<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eshop Scanner</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_product">New</string>
    <string name="action_upload">Upload</string>
    <string name="action_new_order">New</string>
    <string name="action_check_settings">Check settings</string>
    <string name="scan">Scan</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_product_form">Product</string>
    <string name="title_activity_camera">Take photo</string>
    <string name="title_vat">VAT</string>
    <string name="title_barcode">Barcode</string>
    <string name="title_price">Price</string>
    <string name="button_save">Save</string>
    <string name="button_scan">Scan</string>
    <string name="button_camera">Take photo</string>
    <string name="new_product">New product</string>
    <string name="new_order">New order</string>
    <string name="list_products">List products</string>
    <string name="list_orders">List orders</string>
    <string name="hintName">Name of product</string>
    <string name="hintPrice">Price with VAT</string>
    <string name="hintBarcode">Barcode</string>
    <string name="hintBarcodeType">Barcode type</string>
    <string name="hintVat">VAT</string>
    <string name="hintStore">Store</string>
    <string name="title_activity_products">Products</string>
    <string name="context_delete">Delete</string>
    <string name="product_form_data_error">Please fill at least barcode.</string>
    <string name="progress_title">Wait a second</string>
    <string name="progress_upload_message">Uploading data&#8230;</string>
    <string name="progress_checking_message">Checking configuration</string>
    <string name="progress_download_message">Downloading data&#8230;</string>
    <string name="fillin_barcodes">Fill in barcodes</string>
    <string name="title_activity_barcode">Barcodes</string>
    <string name="action_download">Download</string>
    <string name="action_clear_products">Clear list</string>
    <string name="action_clear_orders">Delete all orders</string>
    <string name="api_configuration_ok">API configuration is ok.</string>
    <string name="api_configuration_error">Bad API configuration.</string>
    <string name="title_activity_order">Orders</string>
    <string name="title_activity_order_form">OrderFormActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_scan_product">Scan product</string>
    <string name="action_save_order">Save</string>
    <string name="order_default_name">Order No.</string>
    <string name="order_item_product_count">Products count:</string>
    <string name="order_item_total_price">Total price:</string>
	<string name="no_internet_connection">No internet connection.</string>
	<string name="title_settings_product_view">Simple view</string>
	<string name="title_settings_display">Display</string>
	<string name="title_settings_api">API</string>
	<string name="toast_fill_barcode_error">Please fill barcode before upload.</string>
	<string name="action_check_all">Check all</string>
	<string name="action_uncheck_all">Uncheck all</string>
	<string name="btn_back">Back</string>
	<string name="btn_take_picture">Take picture</string>
</resources>
