<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_download"/>
    
    <item
        android:id="@+id/action_new_product"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_new_product"/>

    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_upload"/>
    
    <item
        android:id="@+id/action_clear_products"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_products"/>
    
    <item android:id="@+id/action_check_all" 
        android:title="@string/action_check_all"
        android:showAsAction="never" 
        android:orderInCategory="100"/>
    
    <item android:id="@+id/action_uncheck_all" 
        android:title="@string/action_uncheck_all"
        android:showAsAction="never" 
        android:orderInCategory="100"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
