<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_order"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_new_order" />
    
    <item
        android:id="@+id/action_upload_orders"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_upload" />
    
    <item
        android:id="@+id/action_clear_orders"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear_orders" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
