<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProductFormActivity" >
	
    <EditText
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/hintName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editName"
        android:ems="10"
        android:hint="@string/hintPrice"
        android:inputType="numberDecimal" />
    
    <EditText
        android:id="@+id/editVat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editPrice"
        android:ems="10"
        android:hint="@string/hintVat"
        android:inputType="number" />

    <EditText
        android:id="@+id/editBarcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editVat"
        android:ems="10"
        android:hint="@string/hintBarcode" />

    <EditText
        android:id="@+id/editBarcodeType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editBarcode"
        android:ems="10"
        android:hint="@string/hintBarcodeType" />
    
    <EditText
        android:id="@+id/editStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editBarcodeType"
        android:ems="10"
        android:hint="@string/hintStore"
        android:inputType="number" />

    <Gallery
            android:id="@+id/gallery1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
        	android:layout_alignParentRight="true"
             android:layout_below="@+id/editStore"
             />
    
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/gallery1"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/buttonScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gallery1"
        android:layout_toRightOf="@+id/buttonSave"
        android:text="@string/button_scan" />
    
    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gallery1"
        android:layout_toRightOf="@+id/buttonScan"
        android:text="@string/button_camera" />

</RelativeLayout>
